test/testmodules/Invalidation/PkgC/src/PkgC.jl
module PkgC

nbits(::Int8) = 8
nbits(::Int16) = 16

end # module PkgC
